--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "my-app3",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://s019530.github.io",
+  "homepage": "https://s019530.github.io/Financial-Data-Filter-App",
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
